# clustering-nest

./: package-lock.json  package.json
clustering-nest/: package-lock.json  package.json
clustering-nest/src/: app.module.ts
clustering-nest/src/cluster/: cluster.module.ts  cluster.service.spec.ts
clustering-nest/src/data/: benefits_transformed.json
exploration/: test.csv  test.json
exploration-py/: gen_data.ipynb  gen_data.py  gen_embeddings.py  pyproject.toml
exploration-py/algos/: data.py  eval.ipynb  eval.py  inOutKmeans.py  output.csv  output_rfmac.csv  realtime.py
exploration/js_test/: bulkGenData.js  data2.json  data3 copy.json  data_comic.json  getOpenAI.js
exploration/py_test/: benefits_transformed.csv  benefits_transformed_col.json  cluster.ipynb  gen_data.py  response.json  tasks_transformed.json  test_dbscan_tasks.csv  test_kmeans_benefits.csv  transform.py
past/: app.json  testData.ipynb  testData.py
past/js_test/: app_reviews.json  bulkTransform.js  data3.json  package-lock.json  package.json  processData.js  processed_data.json  transformed copy.json
past/py_test/: benefits.csv  entities.csv  kmeans.ipynb  tasks.csv  test.ipynb  test_kmeans_tasks.csv  transform.ipynb  transformed.json
src/: app.module.ts
src/cluster/: cluster.controller.ts  cluster.interface.ts  cluster.module.ts  cluster.service.spec.ts  cluster.service.ts
src/cluster/utils/: centroid.ts  (+8 more)
src/embedding/: embed.interface.ts  embed.service.spec.ts  embed.service.ts
src/openai/: getOpenAI.js  openai.service.spec.ts  openai.service.ts  processData.js  transform.js
(+14 files in other folders)
