[tool.poetry]
name = "exploration-py"
version = "0.1.0"
description = ""
authors = ["ChenQirui1 <ivanchen.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
